--- a/bundles/org.eclipse.orion.client.ui/web/embeddedEditor/demoBuild/demo/prospecto.css
+++ b/bundles/org.eclipse.orion.client.ui/web/embeddedEditor/demoBuild/demo/prospecto.css
@@ -17,13 +17,13 @@
 	background-color: white;
 }
 .prospecto .rulerLines {
-	color: silver;
+	color: #767676;
 }
 .prospecto .rulerLines.even {
-	color: silver;
+	color: #767676;
 }
 .prospecto .rulerLines.odd {
-	color: silver;
+	color: #767676;
 }
 .prospecto .annotationLine.currentLine {
 	background-color: #EAF2FE;
